flux/apps/ext/netbird/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird-relay-route
  namespace: netbird
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-ext
  hostnames:
    - "netbird.lab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /relay
      backendRefs:
        - name: netbird-relay
          port: 33080
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: middleware-chain # defined in netbird-dashboard/middlewares.yaml
